packages/gatsby-theme-carbon/src/components/Aside/Aside.module.scss
.aside {
  @include carbon--type-style('body-long-01');
  position: relative;
  padding-top: $spacing-04;
  top: -$spacing-04;
}

.aside:before {
  content: '';
  position: absolute;
  top: 0;
  left: -1rem;
  width: 40%;
  height: 1px;
  background: $ui-05;
}

:global(.#{$prefix}--row) .aside p {
  @include carbon--type-style('body-long-01');
  width: 75%;
  padding-right: $spacing-05;
}

// dark background
:global(.container--dark) .aside:before {
  background: $carbon--white-0;
}

